Fix Java 11 compatibility: replace toList() with collect(Collectors.toList())
Co-Authored-By: mason.batchelor@cognition.ai <masonbatchelor81@gmail.com>